# superset-oidc

./: .gitignore  README.md  pyproject.toml
example/: docker-compose.yml
src/superset_oidc/: pyjwt.py  sm.py
src/superset_oidc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
