[build-system]
requires = ["setuptools >= 42", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superset-oidc"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Authlib",
    "flask_openid==1.3.0",
    "flask-oidc==1.3.0",
    "itsdangerous==2.0.1"
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where=["src"]