[build-system]
requires = ["setuptools >= 42", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superset-oidc"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask_openid>=1.3.1,<1.4",
    "flask-oidc>=2.2.0,<2.3"
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where=["src"]